# cbuild-go

./: .gitignore  COPYRIGHT  README.md  example.yml  go.mod
app/cbuildapp/: cbuildapp.go
app/csetupapp/: csetup.go  handlers_config.go  handlers_dependency.go  handlers_detect.go  handlers_get_args.go  handlers_init.go  handlers_source.go
cmd/cbuild/: cbuild.go
cmd/csetup/: csetup.go  handlers_config.go  handlers_dependency.go  handlers_detect.go  handlers_get_args.go  handlers_init.go  handlers_source.go
cmd/gen-manpages/: main.go
example/: cbuild_workspace.yml
example/sources/hellohelper/: CMakeLists.txt
example/sources/hellohelper/headers/hellohelper/: hellohelper.hpp
example/sources/hellohelper/sources/: hellohelper.cpp
example/sources/helloworld/: CMakeLists.txt
example/sources/helloworld/sources/: main.cpp
example/toolchains/generated_gcc/: toolchain.yml
example/toolchains/system_gcc/: toolchain.yml
pkg/ccommon/: autodetect.go  ccommon.go  cmake_options_test.go  codesource.go  codesource_git.go  csetuplists.go  flags.go  prefix_path_test.go  target.go  workspace.go
pkg/cli/: flags.go  flags_test.go  subcommand.go  subcommand_test.go
pkg/cmake/: cmake.go  cmake_test.go
pkg/host/: host.go
pkg/system/: platform.go  processor.go  system_test.go
